<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B5E9A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_sensors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/activity_main_sensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onClick"
        android:text="@string/lista"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_proximity"
        app:layout_constraintEnd_toEndOf="@+id/activity_main_proximity" />

    <Button
        android:id="@+id/activity_main_proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onClick"
        android:text="@string/proximidad"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_step"
        app:layout_constraintStart_toStartOf="@+id/activity_main_step" />

    <Button
        android:id="@+id/activity_main_step"
        android:layout_width="277dp"
        android:layout_height="82dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onClick"
        android:text="@string/pasos"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_gyroscope"
        app:layout_constraintStart_toStartOf="@+id/activity_main_gyroscope" />

    <Button
        android:id="@+id/activity_main_gyroscope"
        android:layout_width="273dp"
        android:layout_height="65dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onClick"
        android:text="@string/gyro"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_environment"
        app:layout_constraintStart_toStartOf="@+id/activity_main_environment" />

    <Button
        android:id="@+id/activity_main_environment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="252dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onClick"
        android:text="@string/ambiente"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>