<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B5E9A"
    tools:context=".gyroscopeActivity">

    <TextView
        android:id="@+id/txtGyroX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroX"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/txtGyroY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroY"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGyroX"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/txtGyroZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroZ"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGyroY"
        app:layout_constraintVertical_bias="0.029" />


</androidx.constraintlayout.widget.ConstraintLayout>